fix(LifeTimeline): Update item image visibility and adjust border style for timeline items

--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,16 @@ button:focus-visible {
   margin-top: 4px;
   display: block;
 }
+/* .vis-label.vis-group-level-0{
+  min-height: 150px;
+  height: 150px;
+  max-height: 200px;
+} */
+/* .vis-foreground .vis-group{
+  min-height: 150px;
+  height: 150px;
+  max-height: 200px;
+} */
 /* .itemTest{
   background-color: #ddd;
 } */
